Added skill microservice and worked on content service and added some mock data

--- a/src/Ludio.Services.Skills.Api/Ludio.Services.Skills.Api.csproj
+++ b/src/Ludio.Services.Skills.Api/Ludio.Services.Skills.Api.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Ludio.Services.Content\Ludio.Services.Content.csproj" />
+    <ProjectReference Include="..\Ludio.Services.Skills\Ludio.Services.Skills.csproj" />
   </ItemGroup>
 
 </Project>
