--- a/src/Ludio.Services.Gateway/Ludio.Services.Gateway.csproj
+++ b/src/Ludio.Services.Gateway/Ludio.Services.Gateway.csproj
@@ -8,6 +8,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Ocelot" Version="12.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Ocelot" Version="13.5.2" />
   </ItemGroup>
 </Project>
